New color gradient added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>  
         <header>
             <h1>
-            Somebody's ToDo List
+            Tanay's ToDo List
             </h1>
         </header>    
         <form>
